# atom.ecs

./: .gitignore  CMakeLists.txt  doxy.in
cmake/in/: EcsConfig.cmake.in
include/: asset.hpp  command.hpp  containers.hpp  custom_description.hpp  ecs.hpp  generator.hpp  queryer.hpp  resources.hpp  schedule.hpp  scheduler.hpp  transient_collection.hpp  world.hpp
src/: schedule.cpp  scheduler.cpp  world.cpp
test/: main.cpp
